# clipo

./: README.md
one-clipboard/: package-lock.json  package.json
one-clipboard/src/: App.jsx  main.jsx
one-clipboard/src-tauri/: Cargo.toml  tauri.conf.json
one-clipboard/src-tauri/icons/: icon.icns
one-clipboard/src-tauri/src/: main.rs
one-clipboard/src/components/: githublink.jsx  home.jsx  loader.jsx  login.jsx  startup.jsx
one-clipboard/src/pages/: home.jsx  login.jsx
one-clipboard/src/utils/: IdManager.js  historyManager.js  shortener.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: notification.jsx
src/utils/: commonFileManager.js  shortener.js
